    Thanks to Duncan Lock for finding and reporting the bug and supplying a
    fix (LP: #544636).

  [ Martin Pitt ]
  * Add no-conffile-timestamp.dpatch: Disable time stamps in conffiles, to
    avoid ever-changing files in /etc. Thanks Joey Hess!
    (Rejected upstream, STR#3067; Closes: #549673)
  * CVE-2010-0393.dpatch: Replace with patch from upstream, and tag
    header. (Closes: #572940)

 -- Martin Pitt <mpitt@debian.org>  Fri, 19 Feb 2010 23:57:22 +0100

cups (1.4.2-9.1) unstable; urgency=high

  * Non-maintainer upload by the Security Team.
  * Fix loading of localized message string from arbitrary files
    through exporting the LOCALEDIR environment variable when lppasswd
    has a setuid bit set (CVE-2010-0393).

 -- Nico Golde <nion@debian.org>  Wed, 03 Mar 2010 21:28:13 +0100

cups (1.4.2-9) unstable; urgency=low

  * debian/control: Build depend on virtual libjpeg-dev package only.
    (Closes: #570381)
  * debian/cups.init.d: Fix syntax error which caused coldplug_usb_printers()
    to needlessly run udev-configure-printer for all USB devices.
  * Bump Standards-Version to 3.8.4 (no changes necesssary).
  * debian/libcupscgi1.symbols: Add new symbol from 1.4.2.
  * debian/cups.init.d: Add missing $remote_fs dependency.

 -- Martin Pitt <mpitt@debian.org>  Thu, 18 Feb 2010 15:16:26 +0100

cups (1.4.2-8) unstable; urgency=low

  [ Till Kamppeter ]
  * dynamic-default-ripcache-size.dpatch: Fixed the copy of thr new function
    cupsdDefaultRIPCacheSize() which goes into the cupsfilter utility. It did
    not return its result and made cupsfilter segfaulting independent of the
    input (LP: #442283).

  [ Martin Pitt ]
  * debian/control: Update libjpeg62-dev build/binary dependency to
    libjpeg8-dev | libjpeg-dev. (Closes: #569230)
  * Acknowledge Bdale Garbee's NMU to work around bad pdftotext behaviour due
    to a bug in ttf-freefont. This has been worked around in texttopdf itself
    in the previous upload (see LP #447961). (Closes: #519643)
