@@ -12,6 +12,10 @@ cups (1.4.2-10) UNRELEASED; urgency=low
     (Rejected upstream, STR#3067; Closes: #549673)
   * CVE-2010-0393.dpatch: Replace with patch from upstream, and tag
     header. (Closes: #572940)
+  * debian/local/filters/pdf-filters/*: Disable call of setErrorFunction() on
+    armel for now, since armel's libpoppler is broken. This works around
+    #575262, so that cups can finally go into testing again (which is more
+    than overdue).
 
  -- Martin Pitt <mpitt@debian.org>  Fri, 19 Feb 2010 23:57:22 +0100
 
